2022-09-13T02:20:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041911668
* notice: last 14d: unq all: 17 115
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 35 143
* notice: next accum: outdated-unq outdated-all / unq all: 1 1 / 33 116
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -2 -28 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-08-29] / [2022-08-30 2022-09-12]

2022-09-12T08:28:12Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3035758557
* notice: last 14d: unq all: 19 143
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 34 142
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 35 143
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-12]

2022-09-11T16:28:24Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3032529610
* notice: last 14d: unq all: 19 142
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 33 141
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 34 142
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-11]

2022-09-11T02:19:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3030220244
* notice: last 14d: unq all: 19 141
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 32 140
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 33 141
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-10]

2022-09-10T02:20:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3026392632