@@ -1,11 +1,11 @@
 {
-  "count": 115,
-  "uniques": 17,
+  "count": 105,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 78,
-      "uniques": 11
+      "count": 67,
+      "uniques": 10
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-09-12T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
