@@ -1,3 +1,11 @@
+2022-09-13T08:27:34Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043503025
+* notice: last 14d: unq all: 16 105
+* notice: prev accum: outdated-unq outdated-all / unq all: 1 1 / 33 116
+* notice: next accum: outdated-unq outdated-all / unq all: 1 1 / 33 106
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -11 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-30 2022-09-13]
+
 2022-09-13T02:20:27Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041911668
 * notice: last 14d: unq all: 17 115
